--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="refresh" content="0; url=swagger.html" />
     <title>Spicio</title>
 </head>
 <body>
